added resume feature

--- a/SkillSphere_frontend/index.html
+++ b/SkillSphere_frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EDGEx AI Toolkit</title>
+    <title>SkillSphere Ai Toolkit</title>
     <link rel="icon" type="image/png" href="aibrain.png"/>
     <!-- Theme initializer: read persisted preference or use OS preference to avoid flash -->
     <script>
