--- a/SkillSphere_frontend/index.html
+++ b/SkillSphere_frontend/index.html
@@ -22,6 +22,26 @@
         }
       })();
     </script>
+    <script 
+  src="https://clinora.fyregig.com/widget.js"
+  data-clinic="apollo-kanpur"
+  data-backend="https://chatbot-backend-s0qi.onrender.com"
+  data-color="#2563eb"
+  data-position="left"
+  defer
+></script>
+
+<style>
+  #clinora-widget,
+  .clinora-widget,
+  [class*="clinora"],
+  [id*="clinora"] {
+    display: block !important;
+    visibility: visible !important;
+    opacity: 1 !important;
+    z-index: 999999 !important;
+  }
+</style>
     <script type="module" src="/src/main.jsx"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   </head>
